export const snapshot = {};

snapshot[`Project Update Command - Help Text 1`] = `
stdout:
"
Usage: update <project>

Writes: true

Description:

  Update a Linear project by UUID, slug ID, or exact name

Options:

  -h, --help                             - Show this help.                                                                                         
  -n, --name              <name>         - Project name                                                                                            
  -d, --description       <description>  - Project description (max 255 characters, enforced by Linear's API; empty string clears it)              
  -f, --description-file  <path>         - Read UTF-8 project description from a file (- for stdin; still subject to the 255-character API limit)  
  --content               <content>      - Replace project overview Markdown; empty string clears it                                               
  --content-file          <path>         - Read UTF-8 project overview Markdown from a file (- for stdin); replaces the full content               
  -s, --status            <status>       - Status UUID or type (planned, started, paused, completed, canceled, backlog)                            
  -l, --lead              <lead>         - Project lead (user UUID, username, name, email, 'self', or '@me')                                       
  --start-date            <date>         - Start date (YYYY-MM-DD)                                                                                 
  --target-date           <date>         - Target date (YYYY-MM-DD)                                                                                
  -t, --team              <team>         - Replace project teams with these UUIDs or keys (can be repeated)                                        
  -j, --json                             - Output the write result as JSON                                                                         
  --base-file             <path>         - Saved view --json output from before editing                                                            
  --unprotected                          - Skip original-value comparison; domain checks still apply                                               
  --expect-field          <field>        - Require this API field to match the saved original value (repeatable)                                   
  --label                 <label>        - Replace the project's labels by UUID or exact name. May be repeated to set multiple labels.             

"
stderr:
""
`;

snapshot[`Project Update Command - Update Name 1`] = `
stdout:
"✓ Updated project: Updated Project Name
https://linear.app/test/project/updated-proj
"
stderr:
""
`;

snapshot[`Project Update Command - Update Description 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-desc
"
stderr:
""
`;

snapshot[`Project Update Command - Update Status 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-status
"
stderr:
""
`;

snapshot[`Project Update Command - Replace Labels 1`] = `
stdout:
"✓ Updated project: Test Project
https://linear.app/test/project/proj-labels
"
stderr:
""
`;
